--- a/hackathons.html
+++ b/hackathons.html
@@ -90,6 +90,15 @@ td {
 <table>
 <tr>
 <td>
+    <a id="k2k21" href="images/hackathons/k2k21.gif">
+    <img src="images/hackathons/k2k21-s.gif" alt="k2k21"></a><br>
+    k2k21: hackathon<br>
+    Август 29 - Сентябрь 4, 2021<br>
+    Замок Либенцелль, Германия<br>
+    26 разработчиков<br>
+    Организован благодаря финансированию со стороны
+    <a href="http://www.genua.de">genua</a>.
+<td>
     <a id="k2k20" href="images/hackathons/k2k20.gif">
     <img src="images/hackathons/k2k20-s.gif" alt="k2k20"></a><br>
     k2k20: german mini hackathon<br>
@@ -108,6 +117,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Росса Л. Ричардсона.
+<tr>
 <td>
     <a id="u2k20" href="images/hackathons/u2k20.gif">
     <img src="images/hackathons/u2k20-s.gif" alt="u2k20-s"></a><br>
@@ -119,7 +129,6 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и помощи <a href="https://www.seehotel-huberhof.de">Seehotel Huberhof</a>.
     <br>
-<tr>
 <td>
     <a id="e2k19" href="images/hackathons/e2k19.gif">
     <img src="images/hackathons/e2k19-s.gif" alt="e2k19-s"></a><br>
@@ -142,6 +151,7 @@ td {
     и поддержке
     <a href="http://fmi.unibuc.ro">факультета математики и компьютерных наук бухарестского университета</a>.
     <br>
+<tr>
 <td>
     <a id="g2k19" href="images/hackathons/g2k19.gif">
     <img src="images/hackathons/g2k19-s.gif" alt="g2k19-s"></a><br>
@@ -152,7 +162,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
-<tr>
 <td>
     <a id="t2k19" href="images/hackathons/t2k19.gif">
     <img src="images/hackathons/t2k19-s.gif" alt="t2k19-s"></a><br>
@@ -175,6 +184,7 @@ td {
     <a href="https://www.victoria.ac.nz">Victoria University of Wellington</a>
     и <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
+<tr>
 <td>
     <a id="l2k18" href="images/hackathons/l2k18.jpg">
     <img src="images/hackathons/l2k18-s.gif" alt="l2k18-s"></a><br>
@@ -206,6 +216,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и Mitja Mu&#382;eni&#269;.
+<tr>
 <td>
     <a id="p2k18" href="images/hackathons/p2k18.gif">
     <img src="images/hackathons/p2k18-s.gif" alt="p2k18-s"></a><br>
@@ -216,7 +227,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.epitech.eu">Epitech Nantes</a>.
-<tr>
 <td>
     <a id="a2k18" href="images/hackathons/a2k18.gif">
     <img src="images/hackathons/a2k18-s.gif" alt="a2k18-s"></a><br>
@@ -237,6 +247,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="http://www.foretell.ca">ForeTell Technologies</a>
     и <a href="http://www.xplornet.ca">Xplornet</a>.
+<tr>
 <td>
     <a id="p2k17" href="images/hackathons/p2k17.gif">
     <img src="images/hackathons/p2k17-s.gif" alt="p2k17-s"></a><br>
@@ -248,7 +259,6 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.in-berlin.de">IN-Berlin</a> and
     <a href="http://www.hostserver.de/">Hostserver</a>.
-<tr>
 <td>
     <a id="t2k17" href="images/hackathons/t2k17.jpg">
     <img src="images/hackathons/t2k17-s.gif" alt="t2k17-s"></a><br>
@@ -269,6 +279,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.genua.de">genua</a>.
+<tr>
 <td>
     <a id="noshirt" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -277,7 +288,6 @@ td {
     Эдмонтон, Канада<br>
     5 разработчиков<br>
     При поддержке Bob Beck.
-<tr>
 <td>
     <a id="a2k17" href="images/hackathons/a2k17.gif">
     <img src="images/hackathons/a2k17-s.gif" alt="a2k17-s"></a><br>
@@ -310,6 +320,7 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и оказанной помощи от <a href="http://www.enseeiht.fr">ENSEEIHT</a> и
     <a href="http://www.objectif-libre.com">Objectif Libre</a>.
+<tr>
 <td>
     <a id="b2k16" href="images/hackathons/b2k16.gif">
     <img src="images/hackathons/b2k16-s.gif" alt="b2k16-s"></a><br>
@@ -319,7 +330,6 @@ td {
     10 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="g2k16" href="images/hackathons/g2k16.gif">
     <img src="images/hackathons/g2k16-s.gif" alt="g2k16-s"></a><br>
@@ -341,6 +351,7 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.oracle.com">Oracle</a>, а также помощи
     <a href="http://cuni.cz">Charles University</a>.
+<tr>
 <td>
     <a id="p2k16" href="images/hackathons/p2k16.gif">
     <img src="images/hackathons/p2k16-s.gif" alt="p2k16-s"></a><br>
@@ -351,7 +362,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и помощи <a href="http://www.epitech.eu">Epitech Nantes</a>.
-<tr>
 <td>
     <a id="n2k15" href="images/hackathons/n2k15.gif">
     <img src="images/hackathons/n2k15-s.gif" alt="n2k15-s"></a><br>
@@ -372,6 +382,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.in-berlin.de">IN-Berlin</a>.
+<tr>
 <td>
     <a id="l2k15" href="images/hackathons/l2k15.gif">
     <img src="images/hackathons/l2k15-s.gif" alt="l2k15-s"></a><br>
@@ -382,7 +393,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и помощи <a href="http://foi.unizg.hr">Open Systems and Security Lab</a>.
-<tr>
 <td>
     <a id="j2k15" href="images/hackathons/j2k15.gif">
     <img src="images/hackathons/j2k15-s.gif" alt="j2k15-s"></a><br>
@@ -402,6 +412,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://sait.ca">SAIT</a>.
+<tr>
 <td>
     <a id="p2k15" href="images/hackathons/p2k15.gif">
     <img src="images/hackathons/p2k15-s.gif" alt="p2k15-s"></a><br>
@@ -412,7 +423,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Энди Хенрдерсона (Andy Henderson).
-<tr>
 <td>
     <a id="s2k15" href="images/hackathons/s2k15.gif">
     <img src="images/hackathons/s2k15-s.gif" alt="s2k15-s"></a><br>
@@ -433,6 +443,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Мити (Mitja Mu&#382;eni&#269;).
+<tr>
 <td>
     <a id="m2k14" href="images/hackathons/m2k14.gif">
     <img src="images/hackathons/m2k14-s.gif" alt="m2k14-s"></a><br>
@@ -443,7 +454,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.uca.ma/">Universit&eacute; Cadi Ayyad</a>.
-<tr>
 <td>
     <a id="n2k14" href="images/hackathons/n2k14.gif">
     <img src="images/hackathons/n2k14-s.gif" alt="n2k14-s"></a><br>
@@ -464,6 +474,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.in-berlin.de">IN-Berlin</a>.
+<tr>
 <td>
     <a id="t2k13" href="images/hackathons/t2k13.jpg">
     <img src="images/hackathons/t2k13-s.gif" alt="t2k13-s"></a><br>
@@ -474,7 +485,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.utoronto.ca">University of Toronto</a>.
-<tr>
 <td>
     <a id="n2k13" href="images/hackathons/n2k13.gif">
     <img src="images/hackathons/n2k13-s.gif" alt="n2k13-s"></a><br>
@@ -495,6 +505,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
+<tr>
 <td>
     <a id="p2k12" href="images/hackathons/p2k12.gif">
     <img src="images/hackathons/p2k12-s.gif" alt="p2k12-s"></a><br>
@@ -504,7 +515,6 @@ td {
     9 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="n2k12" href="images/hackathons/n2k12.gif">
     <img src="images/hackathons/n2k12-s.gif" alt="n2k12-s"></a><br>
@@ -523,6 +533,7 @@ td {
     41 разработчик<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="r2k12" href="images/hackathons/r2k12.gif">
     <img src="images/hackathons/r2k12-s.gif" alt="r2k12-s"></a><br>
@@ -534,7 +545,6 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.ihp.fr">Institute Henri Poincar&eacute;</a>
     и <a href="http://www.u-psud.fr">Paris-Sud University</a>.
-<tr>
 <td>
     <a id="p2k11" href="images/hackathons/p2k11.gif">
     <img src="images/hackathons/p2k11-s.gif" alt="p2k11-s"></a><br>
@@ -554,6 +564,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
+<tr>
 <td>
     <a id="s2k11" href="images/hackathons/s2k11.jpg">
     <img src="images/hackathons/s2k11-s.gif" alt="s2k11-s"></a><br>
@@ -564,7 +575,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Мити (Mitja Mu&#382;eni&#269;).
-<tr>
 <td>
     <a id="c2k11" href="images/hackathons/c2k11.gif">
     <img src="images/hackathons/c2k11-s.gif" alt="c2k11-s"></a><br>
@@ -583,6 +593,7 @@ td {
     15 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="p2k10" href="images/hackathons/p2k10.gif">
     <img src="images/hackathons/p2k10-s.gif" alt="p2k10-s"></a><br>
@@ -592,7 +603,6 @@ td {
     19 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="j2k10" href="images/hackathons/j2k10.gif">
     <img src="images/hackathons/j2k10-s.gif" alt="j2k10-s"></a><br>
@@ -609,6 +619,7 @@ td {
     46 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <br>
     <br>
@@ -626,7 +637,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://vpac.org">Victorian Partnership for Advanced Computing</a>
-<tr>
 <td>
     <a id="h2k9" href="images/hackathons/h2k9.gif">
     <img src="images/hackathons/h2k9-s.gif" alt="h2k9-s"></a><br>
@@ -637,6 +647,7 @@ td {
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>
     и при поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
+<tr>
 <td>
     <a id="p2k9" href="images/hackathons/p2k9.gif">
     <img src="images/hackathons/p2k9-s.gif" alt="p2k9-s"></a><br>
@@ -655,7 +666,6 @@ td {
     14 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.iis.se/english/">.se Foundation</a>.
-<tr>
 <td>
     <a id="c2k9" href="images/hackathons/c2k9.gif">
     <img src="images/hackathons/c2k9-s.gif" alt="c2k9-s"></a><br>
