[1.58] sync - faq/pf/macros.html

--- a/faq/pf/macros.html
+++ b/faq/pf/macros.html
@@ -1,10 +1,6 @@
 <!doctype html>
 <html lang=ru id=faq>
 
-<!-- If you make edits to any FAQ documents, please start each sentence
-     on a new line, and try to keep the general formatting consistent
-     with the rest of the pages -->
-
 <title>OpenBSD PF: Lists and Macros</title>
 <meta charset=utf-8>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,7 +33,7 @@ PF - Списки и макросы
 Списки определяются путем указания элементов в скобках <code>{ }</code>.
 
 <p>
-Когда <a href="https://man.openbsd.org/pfctl">pfctl(8)</a> находит список
+Если <a href="https://man.openbsd.org/pfctl">pfctl(8)</a> находит список
 во время загрузки набора правил, он создает несколько правил, по одному для
 каждого элемента в списке. Например:
 
