[1.60] sync - faq/pf/anchors.html

--- a/faq/pf/anchors.html
+++ b/faq/pf/anchors.html
@@ -99,8 +99,8 @@ load anchor goodguys from "/etc/anchor-goodguys-ssh"
 # <b>echo "pass in proto tcp from 192.0.2.3 to any port 22" | pfctl -a goodguys -f -</b>
 </pre>
 
-Правила также можно сохранять в текстовый файл (и загружать из него).
-Например, вы можете добавить следующие две строки в файл
+Правила также можно сохранять в текстовом файле (и загружать из него).
+Например, добавить следующие две строки в файл
 <code>/etc/anchor-goodguys-www</code>:
 
 <pre class="cmdbox">
@@ -146,10 +146,10 @@ anchor "goodguys" {
 <p>
 Правила могут быть загружены в anchor при помощи того же синтаксиса
 и опций, что и правила, загруженные в основной набор правил.
-Одно предостережение заключается в том, что, если вы не используете
+Одно предостережение заключается в том, что, если не используются
 встроенные anchor-привязки, любые используемые
 <a href="macros.html">макросы</a> также должны быть определены в самой
-anchor-привязке; макросы, определенные в родительском наборе правил,
+anchor-привязке. Макросы, определенные в родительском наборе правил,
 <i>не видны</i> из anchor-привязки.
 
 <p>
