[1.68] sync - faq/pf/config.html

--- a/faq/pf/config.html
+++ b/faq/pf/config.html
@@ -1,10 +1,6 @@
 <!doctype html>
 <html lang=ru id=faq>
 
-<!-- If you make edits to any FAQ documents, please start each sentence
-     on a new line, and try to keep the general formatting consistent
-     with the rest of the pages -->
-
 <title>OpenBSD PF: Начало работы</title>
 <meta charset=utf-8>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -42,23 +38,24 @@ PF включён по умолчанию.
 Перезагрузите систему, чтобы изменения вступили в силу.
 
 <p>
-Также вы можете активировать и деактивировать PF вручную, используя
-программу <a href="https://man.openbsd.org/pfctl">pfctl(8)</a>:
+PF может так же быть активирован (или деактивирован) вручную при помощи
+<a href="https://man.openbsd.org/pfctl">pfctl(8)</a>:
 
 <pre class="cmdbox">
 # <b>pfctl -e</b>
 # <b>pfctl -d</b>
 </pre>
 
-Это позволит включить и отключить PF. Однако набор правил при этом не загрузится.
-Он должен быть загружен отдельно, до или после включения PF.
+Это позволит включить и отключить PF.
+Однако набор правил при этом не загрузится. Он должен быть загружен
+отдельно, до или после включения PF.
 
 <h2 id="config">Конфигурация</h2>
 
 PF считывает свою конфигурацию из файла
 <a href="https://man.openbsd.org/pf.conf">pf.conf(5)</a> во время запуска системы,
 после того, как выполнятся системные
-<a href="https://man.openbsd.org/rc">rc-скрипты</a>.
+<a href="https://man.openbsd.org/rc">rc(8)</a> скрипты.
 Обратите внимание, что хотя <a href="https://man.openbsd.org/pf.conf">pf.conf(5)</a>,
 используемый по умолчанию, загружается системными rc-скриптами, это всего лишь
 текстовый файл, интерпретируемый при помощи
@@ -72,17 +69,14 @@ PF считывает свою конфигурацию из файла
 <code>pf.conf</code> состоит из нескольких частей:
 
 <ul>
-  <li><b><a href="macros.html">Макросы:</a></b>
-    Пользовательские переменные, которые могут содержать IP-адреса, имена интерфейсов и т.д.
-  <li><b><a href="tables.html">Таблицы:</a></b>
-    Структура, используемая для хранения списков IP-адресов.
-  <li><b><a href="options.html">Опции:</a></b>
-    Различные опции контроля работы PF.
-  <li><b><a href="https://www.openbsd.org/faq/pf/filter.html">Правила Фильтрации:</a></b>
-    Разрешают выборочную фильтрацию или блокировку пакетов при их прохождении через любой из
-    интерфейсов. Правилам фильтрации могут быть заданы параметры для указания
-  <a href="nat.html">преобразования сетевых адресов</a> и
-  <a href="https://www.openbsd.org/faq/pf/rdr.html">перенаправления трафика</a>.
+  <li><a href="macros.html">Макросы</a>: пользовательские переменные,
+    которые могут содержать IP-адреса, имена интерфейсов и т.д.
+  <li><a href="tables.html">Таблицы</a>: структура, используемая
+    для хранения списков IP-адресов.
+  <li><a href="options.html">Опции</a>: различные опции контроля работы PF.
+  <li><a href="https://www.openbsd.org/faq/pf/filter.html">Правила фильтрации</a>:
+    разрешают выборочную фильтрацию или блокировку пакетов при их прохождении через любой из
+    интерфейсов.
 </ul>
 
 Пустые строки игнорируются, а строки, начинающиеся с <code>#</code>, воспринимаются
@@ -94,12 +88,13 @@ PF считывает свою конфигурацию из файла
 <a href="https://man.openbsd.org/pfctl">pfctl(8)</a>.
 Некоторые примеры команд:
 
-<pre class="cmdbox"># <b>pfctl -f  /etc/pf.conf</b>	Загрузить файл pf.conf
-# <b>pfctl -nf /etc/pf.conf</b>	Проанализировать синтаксис, но не загружать сам файл.
-# <b>pfctl -sr</b>			Показать текущий набор правил
-# <b>pfctl -ss</b>			Показать таблицу текущих состояний
-# <b>pfctl -si</b>			Показать статистику фильтра и счетчики
-# <b>pfctl -sa</b>			Покажите ВСЁ что возможно показать
+<pre class="cmdbox">
+# <b>pfctl -f  /etc/pf.conf</b>	# Загрузить файл pf.conf
+# <b>pfctl -nf /etc/pf.conf</b>	# Проанализировать синтаксис, но не загружать сам файл.
+# <b>pfctl -sr</b>			# Показать текущий набор правил
+# <b>pfctl -ss</b>			# Показать таблицу текущих состояний
+# <b>pfctl -si</b>			# Показать статистику фильтра и счетчики
+# <b>pfctl -sa</b>			# Покажите ВСЁ что возможно показать
 </pre>
 
 Полный список команд можно найти в <a href="https://man.openbsd.org/pfctl">man-странице</a>.
