--- a/faq/pf/options.html
+++ b/faq/pf/options.html
@@ -19,7 +19,7 @@ PF - Параметры работы фильтра
 
 <p>
 Эти параметры используются для управления работой PF.
-Укразываются в файле <code>pf.conf</code> при помощи директивы <code>set</code>.
+Они укразываются в файле <code>pf.conf</code> при помощи директивы <code>set</code>.
 
 <dl id="block-policy">
 <dt><code>set block-policy <i>option</i></code><br>
@@ -33,7 +33,7 @@ PF - Параметры работы фильтра
 <dd>Имейте в виду, что определенные правила фильтра могут перекрывать назначенное поведение.
 Поведение по умолчанию <tt>drop</tt>.
 </dl>
-
+<p>
 <dl id="debug">
 <dt><code>set debug <i>option</i></code><br>
 <dd>Устанавливает debugging уровень для pf.
@@ -41,23 +41,22 @@ PF - Параметры работы фильтра
     <code>err</code>, <code>warning</code>, <code>notice</code>,
     <code>info</code> и <code>debug</code>.
 </dl>
-
+<p>
 <dl id="fingerprints">
 <dt><code>set fingerprints <i>file</i></code><br>
 <dd>Устанавливает файл, из которого загружаются fingerprints операционных систем.
     Для использования с <a href="filter.html#osfp">passive OS fingerprinting</a>.
     По умолчанию используется файл <code>/etc/pf.os</code>.
 </dl>
-
+<p>
 <dl id="limit">
 <dt><code>set limit <i>option value</i></code><br>
 <dd>Устанавливает различные лимиты для операций pf.
-    The current settings of
-    these values can be viewed with <code>pfctl -s memory</code>.
+    Текущее значение этой переменной можно увидеть при помощи <code>pfctl -s memory</code>.
     <ul>
       <li><code>frags</code> - максимальное количество записей в пуле памяти, которые
           используются для пересборки пакетов (scrub rules).
-	  По умолчанию 5000.
+	      По умолчанию 5000.
       <li><code>src-nodes</code> - максимальное количество записей в пуле памяти, которые
           используются для отслеживания source IP адресов (создаются параметрами
           <code>sticky-address</code> и <code>source-track</code>).
@@ -76,7 +75,7 @@ PF - Параметры работы фильтра
 	  устанавливается в 100000.
     </ul>
 </dl>
-
+<p>
 <dl id="loginterface">
 <dt><code>set loginterface <i>interface</i></code><br>
 <dd>Устанавливает интерфейс, для которого PF будет собирать статистику, такую как
@@ -88,7 +87,7 @@ PF - Параметры работы фильтра
     Для отключения сбора статистики установите параметр в значение <code>none</code>.
     По умолчанию <code>none</code>.
 </dl>
-
+<p>
 <dl id="optimization">
 <dt><code>set optimization <i>option</i></code><br>
 <dd>Оптимизирует PF для использования в одном из следующих сетевых окружений:
@@ -105,7 +104,7 @@ PF - Параметры работы фильтра
     </ul>
 <dd>По умолчанию <code>normal</code>.
 </dl>
-
+<p>
 <dl id="ruleset-optimization">
 <dt><code>set ruleset-optimization <i>option</i></code>
 <dd>Управляет операциями оптимизатора правил PF.
@@ -123,10 +122,10 @@ PF - Параметры работы фильтра
 	  чтобы приспособить порядок быстрых правил (правил с параметром quick) к текущему
 	  сетевому трафику.
     </ul>
-<dd>Начиная с OpenBSD 4.2, значением по умолчанию является <code>basic</code>.
+<dd>Значением по умолчанию является <code>basic</code>.
 В <a href="https://man.openbsd.org/pf.conf">pf.conf(5)</a> можно найти более детальное описание.
 </dl>
-
+<p>
 <dl id="skip">
 <dt><code>set skip on <i>interface</i></code><br>
 <dd>Пропускает <i>всю</i> PF обработку на том или ином <code><i>interface</i></code>.
@@ -157,7 +156,7 @@ PF - Параметры работы фильтра
     </ul>
 <dd>По умолчанию <code>floating</code>.
 </dl>
-
+<p>
 <dl id="timeout">
 <dt><code>set timeout <i>option value</i></code><br>
 <dd>Устанавливает значения различных таймаутов (в секундах).
@@ -188,4 +187,3 @@ set fingerprints "/etc/pf.os.test"
 set skip on lo0
 set state-policy if-bound
 </pre>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             
