--- a/faq/faq14.html
+++ b/faq/faq14.html
@@ -73,7 +73,7 @@ FAQ - Работаем с дисками
 <ul>
   <li>
     <a href="https://man.openbsd.org/disklabel">disklabel(8)</a> раздел,
-    который также называют разедом со своей ФС(filesystem partitions).
+    который также называют разделом со своей ФС(filesystem partitions).
   <li>
     <a href="https://man.openbsd.org/fdisk">fdisk(8)</a> раздел, иногда
     называемый Master Boot Record (MBR) разделом.
