--- a/libressl/index.html
+++ b/libressl/index.html
@@ -58,6 +58,7 @@ LibreSSL представляет из себя криптографически
 
 <p>
 Последним stable релизом является 3.3.4.<br>
+Последним development релизом является 3.4.0.<br>
 Больше информации можно найти на странице
 <a href="releases.html">доступных версий</a>.
 
