[1.389] using russian «» - faq/faq14.html

--- a/faq/faq14.html
+++ b/faq/faq14.html
@@ -68,7 +68,7 @@ FAQ - Работаем с дисками
 
 <h3>Разделы и файловые системы (ФС)</h3>
 
-Понятие "раздел" (partition) имеют два разных значения в OpenBSD:
+Понятие «раздел» (partition) имеют два разных значения в OpenBSD:
 
 <ul>
   <li>
@@ -341,7 +341,7 @@ bfb4775bb8397569.a /altroot ffs xx 0 0
 ваш <code>/etc</code>, это гарантирует, что копии любых изменений в конфигурации
 системы будут обновляться ежедневно.
 
-Это "disk image" копия, созданная при помощи
+Это «disk image» копия, созданная при помощи
 <a href="https://man.openbsd.org/dd">dd(1)</a>, а не копия file-by-file,
 поэтому размер вашего <code>/altroot</code> должен быть как минимум того же
 размера, что и корневой раздел.
@@ -524,7 +524,7 @@ amd64, sparc64 и arm64.
 вручную создать еще пару таких устройств, если они требуются для желаемой
 настройки softraid.
 Например, если вам потребуется второе и третье устройство
-<a href="https://man.openbsd.org/sd">sd(4)</a> для создания "зеркала",
+<a href="https://man.openbsd.org/sd">sd(4)</a> для создания «зеркала»,
 сделайте следующее в консоли:
 
 <pre class="cmdbox">
@@ -625,7 +625,7 @@ sd2: 10244MB, 512 bytes/sec, 20980362 sec total
 </pre>
 
 Хорошей идеей может быть создание cron job, с целью проверки состояния
-"зеркала".
+«зеркала».
 
 <h4>Пересборка зеркала</h4>
 
