[1.74] sync - faq/pf/logging.html

--- a/faq/pf/logging.html
+++ b/faq/pf/logging.html
@@ -35,10 +35,10 @@ PF - создание и анализ log-файлов (протоколиров
 <a href="https://man.openbsd.org/pflog">pflog(4)</a>, к которому добавляется
 дополнительная информация о интерфейсе, через который прошел пакет, действие,
 которое пременил PF к этому пакету (pass или block), и др.
-При помощи pflog(4) user-space программы могут получать logging data из ядра.
-Если PF включен (enabled) во время загрузки системы, запускается демон
+При помощи <code>pflog</code> user-space программы могут получать logging data
+из ядра. Если PF включен (enabled) во время загрузки системы, запускается демон
 <a href="https://man.openbsd.org/pflogd">pflogd(8)</a>.
-По умолчанию pflogd(8) прослушивает интерфейс <code>pflog0</code> и записывает
+По умолчанию pflogd прослушивает интерфейс <code>pflog0</code> и записывает
 все протоколируемые данные в файл <code>/var/log/pflog</code>.
 
 
@@ -59,20 +59,20 @@ PF - создание и анализ log-файлов (протоколиров
 <dd>Означает, что все обработанные пакеты, а не только инициализирующий пакет,
     будут занесены в log-файл.
     Полезно для правил, которые создают состояния.
-
+<p>
 <dt><code>to <i>pflogN</i></code>
 <dd>Означает, что все обработанные пакеты будут занесены в log-файл при помощи
     интерфейса pflog(4).
     Например, при использовании 
     <a href="https://man.openbsd.org/spamlogd">spamlogd(8)</a>, весь SMTP трафик
-    будет занесен в log-файл при помощи специального для этого интерфейса pflog(4).
-    Демону spamlogd(8) можно затем указать, чтобы он прослушивал этот интерфейс.
+    будет занесен в log-файл при помощи специального для этого интерфейса pflog.
+    Демону spamlogd можно затем указать, чтобы он прослушивал этот интерфейс.
     Это позволит оставить основной файл протокола PF свободным от трафика SMTP, 
     который в этом случае не нуждается в протоколировании.
-    Для создания интерфейса pflog(4) используйте 
+    Для создания интерфейса pflog используйте
     <a href="https://man.openbsd.org/ifconfig">ifconfig(8)</a>.
     По умолчанию интерфейс <code>pflog0</code> создается автоматически.
-
+<p>
 <dt><code>user</code>
 <dd>Является UNIX user-id и group-id, который будет владельцем сокета
     источника/приемника пакета (этот сокет всегда локальный) и будет
@@ -99,15 +99,14 @@ Logfile, создаваемый pflogd, является бинарным фай
 # <b>tcpdump -n -e -ttt -r /var/log/pflog</b>
 </pre>
 
-Учтите, что при просмотре pflog файла при помощи tcpdump(8) вы <i>не увидете</i>
+Учтите, что при просмотре pflog файла при помощи tcpdump вы <i>не увидете</i>
 информацию в реальном времени. Просмотр протоколируемых пакетов в реальном
-времени можно увидеть при помощи <code>pflog0</code>интерфейса:
+времени можно увидеть при помощи <code>pflog0</code> интерфейса:
 
 <pre class="cmdbox">
 # <b>tcpdump -n -e -ttt -i pflog0</b>
 </pre>
 
-<b>ПРИМЕЧАНИЕ: </b>
 При чтении/анализе протокола, нужно быть особо осторожным, а именно - учитывать
 подробное декодирование протоколов tcpdump (активируется опцией командной строки
 <code>-v</code>).
@@ -181,8 +180,8 @@ log-файле pflogd; вышеупомянутые команды лишь по
 # <b>tcpdump -n -e -ttt -i pflog0 inbound and action block and on wi0</b>
 </pre>
 
-Команда покажет log в реальном времени только для входящих пакетов, которые
-были блокированы на интерфейсе wi0.
+Эта команда покажет log (в реальном времени) только для входящих пакетов,
+которые были блокированы на интерфейсе wi0.
 
 <!-- XXX: needs to be rewritten
 <h2 id="syslog">Packet logging through syslog</h2>
@@ -230,7 +229,7 @@ Add the following line to <code>/etc/syslog.conf</code>:
 local0.info     /var/log/pflog.txt
 </pre>
 
-If you also want to log to a remote log server, add the line:
+If logging to a remote log server is also desired, add the line:
 
 <pre class="cmdbox">
 local0.info     @syslogger
